--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -13,20 +12,27 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $higher-order-operators-primary: mat.define-palette(mat.$indigo-palette);
-$higher-order-operators-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$higher-order-operators-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $higher-order-operators-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$higher-order-operators-theme: mat.define-light-theme((
-  color: (
-    primary: $higher-order-operators-primary,
-    accent: $higher-order-operators-accent,
-    warn: $higher-order-operators-warn,
+$higher-order-operators-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $higher-order-operators-primary,
+      accent: $higher-order-operators-accent,
+      warn: $higher-order-operators-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -34,6 +40,15 @@ $higher-order-operators-theme: mat.define-light-theme((
 @include mat.all-component-themes($higher-order-operators-theme);
 
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
