--- a/src/app/members/members-details/members-details.component.html
+++ b/src/app/members/members-details/members-details.component.html
@@ -1,1 +1,35 @@
-<p>members-details works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Create A Member</mat-card-title>
+  </mat-card-header>
+  <form>
+    <mat-card-content>
+      <mat-form-field class="w-full">
+        <mat-label>First Name</mat-label>
+        <input matInput type="text" placeholder="Type your first name here" />
+      </mat-form-field>
+      <mat-form-field class="w-full">
+        <mat-label>Last Name</mat-label>
+        <input matInput type="text" placeholder="Type your last name here" />
+      </mat-form-field>
+      <mat-form-field class="w-full">
+        <mat-label>Email</mat-label>
+        <input matInput type="email" placeholder="Type your last email here" />
+      </mat-form-field>
+      <mat-form-field class="w-full">
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions class="justify-end gap-3">
+      <button mat-stroked-button type="reset" color="warn">Cancel</button>
+      <button mat-flat-button type="submit" color="primary">Submit</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
