--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,1 +1,8 @@
-<p>members works!</p>
+<div class="flex flex-wrap gap-3 mt-3 md:flex-nowrap">
+  <div class="order-2 w-full md:order-1">
+    <higher-order-operators-members-list></higher-order-operators-members-list>
+  </div>
+  <div class="order-1 w-full md:order-2">
+    <higher-order-operators-members-details></higher-order-operators-members-details>
+  </div>
+</div>
