--- a/src/app/members/members-details/members-details.component.html
+++ b/src/app/members/members-details/members-details.component.html
@@ -2,23 +2,38 @@
   <mat-card-header>
     <mat-card-title>Create A Member</mat-card-title>
   </mat-card-header>
-  <form>
+  <form [formGroup]="form">
     <mat-card-content>
       <mat-form-field class="w-full">
         <mat-label>First Name</mat-label>
-        <input matInput type="text" placeholder="Type your first name here" />
+        <input
+          matInput
+          type="text"
+          placeholder="Type your first name here"
+          formControlName="firstName"
+        />
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Last Name</mat-label>
-        <input matInput type="text" placeholder="Type your last name here" />
+        <input
+          matInput
+          type="text"
+          placeholder="Type your last name here"
+          formControlName="lastName"
+        />
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Email</mat-label>
-        <input matInput type="email" placeholder="Type your last email here" />
+        <input
+          matInput
+          type="email"
+          placeholder="Type your last email here"
+          formControlName="email"
+        />
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker" />
+        <input matInput [matDatepicker]="picker" formControlName="dob" />
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
