--- a/src/app/members/members-list/members-list.component.html
+++ b/src/app/members/members-list/members-list.component.html
@@ -1,3 +1,16 @@
 <mat-card>
-  <mat-card-content>Simple card</mat-card-content>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item
+        *ngFor="let member of members"
+        class="hover:bg-gray-50"
+        (click)="selectedClicked(member)"
+      >
+        <h3 matListItemTitle>{{ member.firstName }} {{ member.lastName }}</h3>
+        <button mat-icon-button matListItemMeta>
+          <mat-icon>clear</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
 </mat-card>
