feat: update logic

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -10,6 +10,7 @@
     <higher-order-operators-members-details
       [member]="selectedMember"
       (created)="createMember($event)"
+      (updated)="updateMember($event)"
     />
   </div>
 </div>
