feat: reset logic

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -11,6 +11,7 @@
       [member]="selectedMember"
       (created)="createMember($event)"
       (updated)="updateMember($event)"
+      (reset)="reset()"
     />
   </div>
 </div>
