--- a/src/app/members/members-details/members-details.component.html
+++ b/src/app/members/members-details/members-details.component.html
@@ -1,6 +1,8 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Create A Member</mat-card-title>
+    <mat-card-title>
+      {{ memberId ? 'Updating ' + memberFirstName : 'Create A Member' }}
+    </mat-card-title>
   </mat-card-header>
   <form [formGroup]="form" (submit)="formSubmitted(form.value)">
     <mat-card-content>
@@ -43,8 +45,17 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions class="justify-end gap-3">
-      <button mat-stroked-button type="reset" color="warn">Cancel</button>
-      <button mat-flat-button type="submit" color="primary">Submit</button>
+      <button
+        mat-stroked-button
+        type="reset"
+        color="warn"
+        (click)="formReset()"
+      >
+        Cancel
+      </button>
+      <button mat-flat-button type="submit" color="primary">
+        {{ memberId ? 'Update' : 'Submit' }}
+      </button>
     </mat-card-actions>
   </form>
 </mat-card>
