--- a/src/app/members/members-details/members-details.component.html
+++ b/src/app/members/members-details/members-details.component.html
@@ -36,7 +36,7 @@
       <mat-form-field class="w-full">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="picker" formControlName="dob" />
-        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-hint class="text-sm text-gray-400">MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker"
