--- a/src/app/members/members-details/members-details.component.html
+++ b/src/app/members/members-details/members-details.component.html
@@ -14,6 +14,11 @@
           placeholder="Type your first name here"
           formControlName="firstName"
         />
+        <mat-error
+          *ngFor="let error of form.get('firstName')?.errors ?? {} | errorKeys"
+        >
+          {{ messages[error] }}
+        </mat-error>
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Last Name</mat-label>
@@ -23,6 +28,11 @@
           placeholder="Type your last name here"
           formControlName="lastName"
         />
+        <mat-error
+          *ngFor="let error of form.get('lastName')?.errors ?? {} | errorKeys"
+        >
+          {{ messages[error] }}
+        </mat-error>
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Email</mat-label>
@@ -32,6 +42,11 @@
           placeholder="Type your last email here"
           formControlName="email"
         />
+        <mat-error
+          *ngFor="let error of form.get('email')?.errors ?? {} | errorKeys"
+        >
+          {{ messages[error] }}
+        </mat-error>
       </mat-form-field>
       <mat-form-field class="w-full">
         <mat-label>Choose a date</mat-label>
