--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,14 +1,18 @@
-<div class="flex flex-wrap gap-3 mt-3 md:flex-nowrap">
+<div
+  *ngIf="viewModel$ | async as vm"
+  class="flex flex-wrap gap-3 mt-3 md:flex-nowrap"
+>
   <div class="order-2 w-full md:order-1">
     <higher-order-operators-members-list
-      [members]="members$ | async"
+      [callState]="vm.callState"
+      [members]="vm.members"
       (deleted)="deleteMember($event)"
       (selected)="selectMember($event)"
     />
   </div>
   <div class="order-1 w-full md:order-2">
     <higher-order-operators-members-details
-      [member]="selectedMember$ | async"
+      [member]="vm.member"
       (submitted)="saveMember($event)"
       (reset)="reset()"
     />
