--- a/src/app/members/members-list/members-list.component.html
+++ b/src/app/members/members-list/members-list.component.html
@@ -2,11 +2,29 @@
   <mat-card-header>
     <mat-card-title> Members List </mat-card-title>
   </mat-card-header>
-  <mat-progress-bar
-    *ngIf="callState === loadingState.LOADING"
-    mode="indeterminate"
-  ></mat-progress-bar>
+
   <mat-card-content>
+    <mat-progress-bar
+      *ngIf="callState === loadingState.LOADING"
+      mode="indeterminate"
+    />
+    <mat-form-field class="w-full mt-3">
+      <mat-label>Search</mat-label>
+      <input
+        matInput
+        placeholder="Search By First Name"
+        [formControl]="searchControl"
+      />
+      <button
+        *ngIf="searchControl.value"
+        matSuffix
+        mat-icon-button
+        (click)="searchControl.reset(''); $event.stopImmediatePropagation()"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+
     <mat-list>
       <mat-list-item
         *ngFor="let member of members"
