--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -7,6 +7,7 @@
       [callState]="vm.callState"
       [members]="vm.members"
       (deleted)="deleteMember($event)"
+      (searched)="searchMembers($event)"
       (selected)="selectMember($event)"
     />
   </div>
