feat: first pass member ui

--- a/src/app/member/member-comments/member-comments.component.html
+++ b/src/app/member/member-comments/member-comments.component.html
@@ -1,1 +1,6 @@
-<p>member-comments works!</p>
+<h5 class="text-2xl font-semibold">Comments Section</h5>
+
+<mat-form-field class="w-full my-3">
+  <mat-label>Add A Comment</mat-label>
+  <input matInput type="text" formControlName="email" />
+</mat-form-field>
