--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,2 +1,9 @@
-<higher-order-operators-member-info />
-<higher-order-operators-member-comments />
+<div class="flex flex-col gap-3 mt-3">
+  <a mat-stroked-button class="self-start" color="accent" routerLink="../">
+    <mat-icon>arrow_back</mat-icon>
+    Back
+  </a>
+  <higher-order-operators-member-info />
+  <mat-divider />
+  <higher-order-operators-member-comments />
+</div>
