--- a/src/app/member/member-info/member-info.component.html
+++ b/src/app/member/member-info/member-info.component.html
@@ -1,39 +1,31 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>
-      <h3 class="text-3xl font-bold">Victor Avila</h3></mat-card-title
+      <h3 class="text-3xl font-bold">
+        {{ form.firstName.value }} {{ form.lastName.value }}
+      </h3></mat-card-title
     >
   </mat-card-header>
   <mat-card-content class="mt-3">
-    <div class="flex flex-wrap gap-1">
-      <mat-form-field appearance="outline" class="w-[48%]">
-        <mat-label>First Name</mat-label>
-        <input
-          matInput
-          type="text"
-          readonly
-          disabled
-          formControlName="firstName"
-        />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="w-[48%]">
-        <mat-label>Last Name</mat-label>
-        <input
-          matInput
-          type="text"
-          readonly
-          disabled
-          formControlName="lastName"
-        />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="w-[48%]">
-        <mat-label>Email</mat-label>
-        <input matInput type="text" readonly disabled formControlName="email" />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="w-[48%]">
-        <mat-label>Date Of Birth</mat-label>
-        <input matInput type="text" readonly disabled formControlName="dob" />
-      </mat-form-field>
-    </div>
+    <form [formGroup]="form">
+      <div class="flex flex-wrap gap-1">
+        <mat-form-field appearance="outline" class="w-[48%]">
+          <mat-label>First Name</mat-label>
+          <input matInput type="text" readonly formControlName="firstName" />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-[48%]">
+          <mat-label>Last Name</mat-label>
+          <input matInput type="text" readonly formControlName="lastName" />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-[48%]">
+          <mat-label>Email</mat-label>
+          <input matInput type="text" readonly formControlName="email" />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-[48%]">
+          <mat-label>Date Of Birth</mat-label>
+          <input matInput type="text" readonly formControlName="dob" />
+        </mat-form-field>
+      </div>
+    </form>
   </mat-card-content>
 </mat-card>
