--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,9 +1,14 @@
-<div class="flex flex-col gap-3 mt-3">
-  <a mat-stroked-button class="self-start" color="accent" routerLink="../">
+<div *ngIf="viewModel$ | async as vm" class="flex flex-col gap-3 mt-3">
+  <a
+    mat-stroked-button
+    class="self-start"
+    color="accent"
+    routerLink="../../members"
+  >
     <mat-icon>arrow_back</mat-icon>
     Back
   </a>
-  <higher-order-operators-member-info />
+  <higher-order-operators-member-info [member]="vm.member" />
   <mat-divider />
   <higher-order-operators-member-comments />
 </div>
