--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <h3 class="text-2xl">Higher Order Operators</h3>
   <span class="flex-auto"></span>
-  <button mat-icon-button>
+  <button mat-icon-button (click)="openSnackBar()">
     <mat-icon>favorite</mat-icon>
   </button>
 </mat-toolbar>
