--- a/src/app/member/member-comments/member-comments.component.html
+++ b/src/app/member/member-comments/member-comments.component.html
@@ -2,7 +2,12 @@
 
 <mat-form-field class="w-full my-3">
   <mat-label>Add A Comment</mat-label>
-  <input matInput type="text" formControlName="email" />
+  <input
+    matInput
+    type="text"
+    [formControl]="commentControl"
+    (keyup.enter)="comment(commentControl.value)"
+  />
 </mat-form-field>
 
 <mat-list>
