--- a/src/app/members/members-list/members-list.component.html
+++ b/src/app/members/members-list/members-list.component.html
@@ -25,31 +25,51 @@
       </button>
     </mat-form-field>
 
-    <mat-list>
-      <mat-list-item
-        *ngFor="let member of members"
-        class="hover:bg-gray-50"
-        (click)="selectedClicked(member); $event.stopImmediatePropagation()"
-      >
-        <h3 matListItemTitle>{{ member.firstName }} {{ member.lastName }}</h3>
-        <div matListItemMeta>
-          <button
-            mat-icon-button
-            color="warn"
-            (click)="deleteClicked(member); $event.stopImmediatePropagation()"
-          >
-            <mat-icon>clear</mat-icon>
-          </button>
-          <a
-            mat-icon-button
-            color="primary"
-            [routerLink]="['../', 'member', member.id]"
-            (click)="$event.stopImmediatePropagation()"
-          >
-            <mat-icon>chevron_right</mat-icon>
-          </a>
-        </div>
-      </mat-list-item>
-    </mat-list>
+    <table mat-table class="w-full" matSort [dataSource]="dataSource ?? []">
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.firstName }} {{ row.lastName }}
+        </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <td mat-cell *matCellDef="let row">
+          <div class="flex justify-end">
+            <button
+              mat-icon-button
+              color="warn"
+              (click)="deleteClicked(row); $event.stopImmediatePropagation()"
+            >
+              <mat-icon>clear</mat-icon>
+            </button>
+            <a
+              mat-icon-button
+              color="primary"
+              [routerLink]="['../', 'member', row.id]"
+              (click)="$event.stopImmediatePropagation()"
+            >
+              <mat-icon>chevron_right</mat-icon>
+            </a>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      #paginator
+      [length]="dataSource?.data?.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [pageSizeOptions]="[3, 5, 10]"
+      showFirstLastButtons
+    >
+    </mat-paginator>
   </mat-card-content>
 </mat-card>
