--- a/src/app/members/members-list/members-list.component.html
+++ b/src/app/members/members-list/members-list.component.html
@@ -25,10 +25,10 @@
       </button>
     </mat-form-field>
 
-    <table mat-table class="w-full" matSort [dataSource]="dataSource ?? []">
+    <table mat-table class="w-full" [dataSource]="dataSource">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let row">
           {{ row.firstName }} {{ row.lastName }}
         </td>
@@ -36,7 +36,7 @@
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
           <div class="flex justify-end">
             <button
@@ -64,10 +64,11 @@
 
     <mat-paginator
       #paginator
-      [length]="dataSource?.data?.length"
+      [length]="total"
       [pageIndex]="0"
       [pageSize]="10"
       [pageSizeOptions]="[3, 5, 10]"
+      (page)="pageChanged($event)"
       showFirstLastButtons
     >
     </mat-paginator>
